--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -21,8 +21,9 @@ format:
             - left=20mm
             - right=20mm
             - bottom=20mm
+    docx: default
 css: ../assets/cv.css
-format-links: [pdf]
+format-links: [pdf, docx]
 ---
 
 ```{=html}
@@ -191,7 +192,7 @@ Graduated with a double major in applied and pure mathematics
 :::
 
 ::: {.rightcol .flushright data-latex="{0.15\textwidth}" }
-2015 --- 2019
+2010 --- 2013
 :::
 ::::
 
