Add URL parsing

--- a/cv/index.qmd
+++ b/cv/index.qmd
@@ -204,35 +204,36 @@ Graduated with a double major in applied and pure mathematics
 
 
 req <- request("https://api.zotero.org") |>
-    req_url_query(
-        v = 3,
-        include = "bib",
-        sort = "date",
-        style = "journal-of-ecology"
-    ) |>
-        req_headers(`Zotero-API-Key` = Sys.getenv("ZOTERO_API_KEY")) |>
-    req_url_path("users", "3027577", "publications", "items") |>
-    req_retry()
+  req_url_query(
+    v = 3,
+    include = "bib",
+    sort = "date",
+    style = "journal-of-ecology"
+  ) |>
+  req_headers(`Zotero-API-Key` = Sys.getenv("ZOTERO_API_KEY")) |>
+  req_url_path("users", "3027577", "publications", "items") |>
+  req_retry()
 
-resp <- req |> 
-    req_perform()
+resp <- req |>
+  req_perform()
 
-a <- resp |> 
-    resp_body_json() |> 
-    purrr::map("bib") |> 
-    unlist() |>
-    #convert from HTML
-    HTMLdecode() |> 
-    # Convert html to markdown
-    str_remove_all("<div[^>]*>") |>
-    str_remove_all("<\\/div>") |> 
-    #replace itallics
-    str_replace_all("<\\/?i>", "*") |>
-    #remove line breaks???
-    str_remove_all("\\n") |>
-    # Bold my name 
-    str_replace("(Lydeamore, M\\.( J\\.)?)", '**\\1**') |>
-    str_trim()
+a <- resp |>
+  resp_body_json() |>
+  purrr::map("bib") |>
+  unlist() |>
+  # convert from HTML
+  HTMLdecode() |>
+  # Convert html to markdown
+  str_remove_all("<div[^>]*>") |>
+  str_remove_all("<\\/div>") |>
+  # replace itallics
+  str_replace_all("<\\/?i>", "*") |>
+  # remove line breaks???
+  str_remove_all("\\n") |>
+  # Bold my name
+  str_replace("(Lydeamore, M\\.( J\\.)?)", "**\\1**") |>
+  str_replace_all("https?://[^\\s]+", function(url) paste0("<", url, ">")) |>
+  str_trim()
 
 preprints <- a[str_count(a, pattern = "medRxiv|arxiv") > 0]
 refereed <- a[!str_count(a, pattern = "medRxiv|arxiv") > 0]
