--- a/index.qmd
+++ b/index.qmd
@@ -31,15 +31,11 @@ format:
 
 I am a lecturer in Business Analytics and Data Science in the [Department of Econometrics and Business Statistics](https://www.monash.edu/business/econometrics-and-business-statistics) at Monash University. I also hold honorary appointments with [Alfred Health](https://www.alfredhealth.org.au/) and [SaferCare Victoria](https://www.safercare.vic.gov.au/).
 
-I love working on translational and high-impact projects across any industry. If you have a question or a project that you think needs a data-driven approach, please **get in touch** with the details below.
+I am a broadly skilled statistician and infectious disease modeller whose work spans a wide array of applications across health, biostatistics, and various non-medical fields. From simple regressions to advanced machine learning and large-scale mathematical modelling, my versatile skill set equips me to tackle complex questions in public health, policy, and beyond.
 
-My **research interests** are:
+Building on my extensive background in infectious disease modelling, my current projects involve studying COVID-19 dynamics and controlling the spread of antimicrobial resistance in Victorian hospitals, in collaboration with The Alfred and the School of Clinical Sciences (Monash University). I also explore broader topics outside health, including quantitative approaches to policy-making, data analytics in the social sciences, and machine learning solutions for diverse challenges.
 
-* Health analytics,
-* Healthcare acquired infections,
-* Understanding data collection methods in the healthcare setting,
-* Infectious diseases control,
-* Statistical software development and workflow.
+My research sits at the intersection of robust statistical tools and real-world data. Whether applying basic regressions or advanced machine learning techniques, I consistently bridge theoretical foundations with hands-on solutions. This interdisciplinary approach underpins my commitment to generating impactful, evidence-based insights that guide clinical practice, policy decisions, and innovation in fields far beyond epidemiology.
 
 :::
 
@@ -47,6 +43,7 @@ I am an advocate of re-use of historical datasets, and performing analysis in as
 
 I thoroughly enjoy engagement with societies and research centres. I am currently the Treasurer of the Australia and New Zealand Industrial and Applied Mathematics (ANZIAM) society, ECA Chair for the NHRMC Centre of Research Excellence [SPECTRUM](https://www.spectrum.edu.au/), and in a non-academic context, treasurer of the [North Park Tennis Club](https://play.tennis.com.au/NorthParkTennisClub).
 
+I am open to consulting opportunities across a wide range of fields, offering a versatile skill set that combines fundamental statistical techniques with advanced methods such as machine learning and mathematical modelling. Whether you need straightforward statistical analyses or more complex predictive approaches, I am available to collaborate on data-driven projects that inform decision-making in public health, policy, business, or other sectors.
 
 ## Contact
 
